# bitwill

./: index.html  plantman bitcoin raw script.txt  symbiosis.txt
will/: Cargo.toml  escrow_script.rs  publish_tx.rs  spending.rs  symbiosis_art.rs  web_server.rs
will/src/: lib.rs  spending.rs  web.rs
will/will/: Cargo.toml
