[package]
name = "my-crate"
version = "0.2.2"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
bitcoin = "0.29"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
rhai = "1.16"  # For custom formula evaluation
chrono = "0.4"  # For date handling
serde_json = "1.0"  # For JSON serialization
thiserror = "1.0"  # For error handling
image = "0.24"  # For creating illustrations

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[[bin]]
name = "symbiosis_art"
path = "src/bin/symbiosis_art.rs"
